[gd_scene load_steps=16 format=2]

[ext_resource path="res://GUI/Menus/Scripts/Pausenmenu.gd" type="Script" id=1]
[ext_resource path="res://GUI/Theme/Button/Button_Hover.tres" type="StyleBox" id=2]
[ext_resource path="res://GUI/Theme/Button/Button_Pressed.tres" type="StyleBox" id=3]
[ext_resource path="res://GUI/Theme/Button/Button_Disabled.tres" type="StyleBox" id=4]
[ext_resource path="res://GUI/Theme/Button/Button_Normal.tres" type="StyleBox" id=5]
[ext_resource path="res://Engine/Font/light/light_6px.tres" type="DynamicFont" id=6]
[ext_resource path="res://Tileset/Tilesets/BG.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Control/VBoxContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/Node2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control/Node2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Control/VBoxContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/Node2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control/Node2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Control/VBoxContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/Node2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control/Node2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("Control/VBoxContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/Node2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control/Node2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Pausenmenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -22.5
margin_right = 33.5
alignment = 1

[node name="Play" type="Button" parent="Control/VBoxContainer"]
margin_top = 68.0
margin_right = 56.0
margin_bottom = 87.0
rect_min_size = Vector2( 56, 0 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
text = "Play"

[node name="Options" type="Button" parent="Control/VBoxContainer"]
margin_top = 91.0
margin_right = 56.0
margin_bottom = 110.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
text = "Options"

[node name="Save" type="Button" parent="Control/VBoxContainer"]
margin_top = 114.0
margin_right = 56.0
margin_bottom = 133.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
text = "Save"

[node name="Quit" type="Button" parent="Control/VBoxContainer"]
margin_top = 137.0
margin_right = 56.0
margin_bottom = 156.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
text = "Quit"

[node name="Node2D" type="Node2D" parent="Control"]
visible = false
modulate = Color( 1, 1, 1, 0 )

[node name="BG" parent="Control/Node2D" instance=ExtResource( 7 )]
tile_data = PoolIntArray( 0, 2, 0, 2, 6, 0, 4, 2, 0, 6, 2, 0, 8, 2, 0, 10, 2, 0, 12, 2, 0, 14, 2, 0, 16, 2, 0, 18, 2, 0, 20, 2, 0, 22, 2, 0, 65536, 7, 0, 65537, 6, 0, 65539, 6, 0, 65541, 2, 0, 65543, 2, 0, 65545, 2, 0, 65547, 2, 0, 65549, 2, 0, 65551, 2, 0, 65553, 6, 0, 65555, 2, 0, 65557, 2, 0, 65559, 7, 0, 131072, 2, 0, 131074, 6, 0, 131076, 6, 0, 131078, 2, 0, 131080, 2, 0, 131082, 2, 0, 131084, 2, 0, 131086, 6, 0, 131088, 6, 0, 131090, 2, 0, 131092, 2, 0, 131094, 2, 0, 196608, 7, 0, 196609, 2, 0, 196611, 6, 0, 196613, 2, 0, 196615, 2, 0, 196617, 2, 0, 196619, 2, 0, 196621, 2, 0, 196623, 6, 0, 196625, 2, 0, 196627, 2, 0, 196629, 2, 0, 196631, 7, 0, 262144, 2, 0, 262146, 2, 0, 262148, 2, 0, 262150, 2, 0, 262152, 6, 0, 262154, 2, 0, 262156, 2, 0, 262158, 2, 0, 262160, 2, 0, 262162, 2, 0, 262164, 2, 0, 262166, 2, 0, 327680, 7, 0, 327681, 2, 0, 327683, 2, 0, 327685, 2, 0, 327687, 6, 0, 327689, 6, 0, 327691, 2, 0, 327693, 2, 0, 327695, 2, 0, 327697, 2, 0, 327699, 2, 0, 327701, 2, 0, 327703, 7, 0, 393216, 2, 0, 393218, 2, 0, 393220, 2, 0, 393222, 6, 0, 393224, 6, 0, 393226, 2, 0, 393228, 2, 0, 393230, 2, 0, 393232, 2, 0, 393234, 2, 0, 393236, 2, 0, 393238, 2, 0, 458752, 7, 0, 458753, 6, 0, 458755, 6, 0, 458757, 2, 0, 458759, 6, 0, 458761, 6, 0, 458763, 2, 0, 458765, 2, 0, 458767, 2, 0, 458769, 2, 0, 458771, 2, 0, 458773, 2, 0, 458775, 8, 0, 524288, 2, 0, 524290, 6, 0, 524292, 2, 0, 524294, 2, 0, 524296, 2, 0, 524298, 2, 0, 524300, 2, 0, 524302, 2, 0, 524304, 2, 0, 524306, 6, 0, 524308, 2, 0, 524310, 6, 0, 589824, 7, 0, 589825, 2, 0, 589827, 2, 0, 589829, 2, 0, 589831, 2, 0, 589833, 2, 0, 589835, 2, 0, 589837, 2, 0, 589839, 6, 0, 589841, 6, 0, 589843, 2, 0, 589845, 2, 0, 589847, 8, 0, 655360, 2, 0, 655362, 2, 0, 655364, 2, 0, 655366, 2, 0, 655368, 2, 0, 655370, 2, 0, 655372, 2, 0, 655374, 6, 0, 655376, 6, 0, 655378, 2, 0, 655380, 2, 0, 655382, 2, 0, 720896, 8, 0, 720897, 2, 0, 720899, 2, 0, 720901, 2, 0, 720903, 2, 0, 720905, 2, 0, 720907, 2, 0, 720909, 2, 0, 720911, 2, 0, 720913, 2, 0, 720915, 2, 0, 720917, 2, 0, 720919, 7, 0, 786432, 6, 0, 786434, 2, 0, 786436, 2, 0, 786438, 6, 0, 786440, 2, 0, 786442, 2, 0, 786444, 2, 0, 786446, 2, 0, 786448, 2, 0, 786450, 2, 0, 786452, 2, 0, 786454, 2, 0, 851968, 8, 0, 851969, 6, 0, 851971, 2, 0, 851973, 6, 0, 851975, 6, 0, 851977, 2, 0, 851979, 2, 0, 851981, 2, 0, 851983, 6, 0, 851985, 2, 0, 851987, 2, 0, 851989, 2, 0, 851991, 7, 0, 917504, 6, 0, 917506, 6, 0, 917508, 2, 0, 917510, 2, 0, 917512, 2, 0, 917514, 2, 0, 917516, 2, 0, 917518, 6, 0, 917520, 6, 0, 917522, 2, 0, 917524, 2, 0, 917526, 2, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Beginn"
playback_speed = 2.0
anims/Beginn = SubResource( 5 )
anims/Entered = SubResource( 6 )
anims/Exited = SubResource( 7 )
anims/inpaused = SubResource( 8 )
[connection signal="pressed" from="Control/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
